--- a/src/newComponents/css/main.css
+++ b/src/newComponents/css/main.css
@@ -1,6 +1,7 @@
 @import url(variables.css);
 @import url(icon.css);
 @import url(button.css);
+@import url(button-group.css);
 
 * {
   box-sizing: border-box;
