--- a/src/newComponents/css/main.css
+++ b/src/newComponents/css/main.css
@@ -2,6 +2,7 @@
 @import url(icon.css);
 @import url(button.css);
 @import url(button-group.css);
+@import url(alert.css);
 
 * {
   box-sizing: border-box;
