--- a/src/uik/css/alert.css
+++ b/src/uik/css/alert.css
@@ -13,6 +13,7 @@
   right: 15px;
   bottom: 15px;
   z-index: 10;
+  width: 30rem;
   max-width: calc(100% - 30px);
 }
 
@@ -35,7 +36,6 @@
   font-size: 1rem;
   color: var(--text);
   font-weight: 600;
-  max-width: 25rem;
   line-height: 1.3;
 }
 
