Add --text-light variable

--- a/src/uik/css/variables.css
+++ b/src/uik/css/variables.css
@@ -4,6 +4,7 @@
   --font-family: 'Lato', sans-serif;
   --bg: #eeebf6;
   --text: #19233c;
+  --text-light: #898e9c;
   --primary-text: #a53187;
   --primary: #a93185;
   --primary-light: #d12fa1;
