--- a/src/uik/css/main.css
+++ b/src/uik/css/main.css
@@ -3,6 +3,7 @@
 @import url(button.css);
 @import url(button-group.css);
 @import url(alert.css);
+@import url(form.css);
 
 * {
   box-sizing: border-box;
