Fix imported stylesheets

--- a/src/uik/css/main.css
+++ b/src/uik/css/main.css
@@ -1,13 +1,15 @@
 @import url(variables.css);
-@import url(icon.css);
-@import url(button.css);
-@import url(button-group.css);
 @import url(alert.css);
+@import url(button-group.css);
+@import url(button.css);
+@import url(card.css);
+@import url(dropdown.css);
 @import url(form.css);
-@import url(label.css);
+@import url(icon.css);
 @import url(input.css);
-@import url(tooltip.css);
+@import url(label.css);
 @import url(text.css);
+@import url(tooltip.css);
 
 * {
   box-sizing: border-box;
