Add Modal component

--- a/src/uik/css/main.css
+++ b/src/uik/css/main.css
@@ -10,6 +10,7 @@
 @import url(label.css);
 @import url(text.css);
 @import url(tooltip.css);
+@import url(modal.css);
 
 * {
   box-sizing: border-box;
