--- a/src/uik/css/main.css
+++ b/src/uik/css/main.css
@@ -11,6 +11,7 @@
 @import url(text.css);
 @import url(tooltip.css);
 @import url(modal.css);
+@import url(loading.css);
 
 * {
   box-sizing: border-box;
